Add email system for sending branded confirmation emails to registrants
Registrants now get a confirmation email matching the site's branding. Emails are sent locally via SMTP using a Bun script with template support, sent-log tracking, and dry-run preview. Also updated the success page copy.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ pnpm-debug.log*
 .env
 .env.production
 
+# local data & email logs
+data/
+emails/sent-log.json
+emails/preview.html
+
 # macOS-specific files
 .DS_Store
 
